...
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/noticia2"
        android:layout_width="241dp"
        android:layout_height="60dp"
        android:fontFamily="serif"
        android:onClick="noticia2"
        android:text="Colombia, sin miedo, a sacudirse contra Brasil en la eliminatoria"
        android:textSize="16sp"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.078"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.742"
        tools:visibility="visible" />

    <TextView
        android:id="@+id/noticia3"
        android:layout_width="261dp"
        android:layout_height="wrap_content"
        android:fontFamily="serif"
        android:onClick="noticia3"
        android:text="Bolivia da golpe certero a Perú y pelea por un puesto al Mundial 2026; así terminó el juego"
        android:textSize="16sp"
...
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.843"
        tools:visibility="visible" />

    <TextView
        android:id="@+id/noticia4"
        android:layout_width="265dp"
        android:layout_height="63dp"
        android:fontFamily="serif"
        android:onClick="noticia4"
        android:text="Fichaje de Luis Díaz al Barcelona dio giro inesperado: nuevos detalles desde Europa"
        android:textSize="16sp"
...
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.972"
        tools:visibility="visible" />

    <ImageView
        android:id="@+id/img2"
        android:layout_width="119dp"
        android:layout_height="44dp"
        android:onClick="noticia2"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
...
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.728"
        app:srcCompat="@drawable/col"
        tools:visibility="visible" />

    <ImageView
        android:id="@+id/img3"
        android:layout_width="107dp"
        android:layout_height="41dp"
        android:onClick="noticia3"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
...
        app:layout_constraintTop_toTopOf="@+id/imageView16"
        app:layout_constraintVertical_bias="0.836"
        app:srcCompat="@drawable/colas3"
        tools:visibility="visible" />

    <ImageView
        android:id="@+id/img4"
        android:layout_width="125dp"
        android:layout_height="47dp"
        android:onClick="noticia4"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
...
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.953"
        app:srcCompat="@drawable/luis"
        tools:visibility="visible" />

    <Button
        android:id="@+id/button"
        android:layout_width="117dp"
        android:layout_height="54dp"
        android:backgroundTint="#FFEB3B"
        android:fontFamily="serif"
        android:onClick="Suscribirse"
        android:text="Suscribirse"
        android:textColor="#000000"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.945"
...
