...
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageView9"
        app:layout_constraintVertical_bias="0.992"
        app:srcCompat="@drawable/publi4" />

    <ImageButton
        android:id="@+id/imageButton3"
        android:layout_width="60dp"
        android:layout_height="49dp"
        android:contentDescription="Botón de acción"
        android:onClick="volver"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
...
